# jtd-derive

./: .gitignore  Cargo.toml  README.md
.github/workflows/: prettier.yaml  rust.yml
macros/: Cargo.toml  README.md
macros/src/: derive.rs  iter_ext.rs  lib.rs
macros/src/derive/: context.rs  field.rs
macros/src/derive/context/: container.rs  field.rs
src/: gen.rs  lib.rs  names.rs  schema.rs  trait.rs  type_id.rs
tests/: README.md  derive_errors.rs  enum.rs  gen.rs  inlining.rs  metadata.rs  recursive.rs  serde.rs  struct.rs  tests.rs
tests/derive_errors/: top_level_metadata.rs  top_level_metadata.stderr  union.rs  union.stderr
tests/derive_errors/enum/: empty.rs  empty.stderr  mixed.stderr  struct_variants_no_attr.rs  struct_variants_no_attr.stderr  tuple_variants.rs  tuple_variants.stderr
tests/derive_errors/struct/: empty_cstruct.rs  empty_cstruct.stderr  tuple_with_many_fields.stderr  tuple_with_wrong_number_of_fields.rs  tuple_with_wrong_number_of_fields.stderr  unit.rs  unit.stderr
