[workspace]

[package]
name = "jtd-gen"
description = "Generate JSON Typedef schemas from Rust types"
version = "0.1.0"
edition = "2021"
authors = ["Tomasz Kurcz"]
license = "MIT"
repository = "https://github.com/uint/jtd-gen"
documentation = "https://docs.rs/jtd-gen"
categories = ["encoding"]
keywords = ["schema", "codegen", "json"]

[dependencies]
jtd-gen-macros = { version = "0.1.0", path = "macros" }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
