[workspace]

[package]
name = "jtd-derive"
description = "Generate JSON Typedef schemas from Rust types"
version = "0.1.0"
edition = "2021"
authors = ["Tomasz Kurcz"]
license = "MIT"
repository = "https://github.com/uint/jtd-derive"
documentation = "https://docs.rs/jtd-derive"
categories = ["encoding"]
keywords = ["schema", "codegen", "json"]

[dependencies]
jtd-derive-macros = { version = "=0.1.0", path = "macros" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
trybuild = "1"
