[workspace]

[package]
name = "jtd-derive"
description = "Generate JSON Typedef schemas from Rust types"
version = "0.1.4"
edition = "2021"
authors = ["Tomasz Kurcz"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/uint/jtd-derive"
documentation = "https://docs.rs/jtd-derive"
categories = ["encoding"]
keywords = ["schema", "codegen", "json"]

[dependencies]
jtd-derive-macros = { version = "=0.1.4", path = "macros" }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.50"
thiserror = "1.0.3"
url = { version = "2", optional = true }

[dev-dependencies]
trybuild = "1.0.89"
