[package]
name = "jtd-gen-macros"
description = "Proc macros for jtd-gen"
version = "0.1.0"
edition = "2021"
authors = ["Tomasz Kurcz"]
license = "MIT"
repository = "https://github.com/uint/jtd-gen"
documentation = "https://docs.rs/jtd-gen-macros"
categories = ["encoding"]
keywords = ["schema", "codegen", "json"]

[dependencies]
