[package]
name = "jtd-derive-macros"
description = "Proc macros for jtd-gen"
version = "0.1.4"
edition = "2021"
authors = ["Tomasz Kurcz"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/uint/jtd-derive"
documentation = "https://docs.rs/jtd-derive-macros"
categories = ["encoding"]
keywords = ["schema", "codegen", "json"]

[lib]
proc-macro = true

[dependencies]
derivative = "2.2.0"
itertools = "0.10.5"
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
serde_derive_internals = "0.26.0"
syn = { version = "1.0.6", features = ["full", "printing", "extra-traits"] }
